Add guillaume part, need to put keycloak url in .env

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,7 +35,7 @@
     "src/**/*.vue",
     "tests/**/*.ts",
     "tests/**/*.tsx"
-  ],
+, "src/auth/keycloak.js"  ],
   "exclude": [
     "node_modules"
   ],
