--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mdi/font": "5.9.55",
     "@mdi/js": "^7.2.96",
     "core-js": "^3.8.3",
+    "dotenv": "^16.3.1",
     "keycloak-js": "^19.0.3",
     "roboto-fontface": "*",
     "socket.io": "^4.6.2",
